@@ -1,5 +1,5 @@
 ===========================================================================
-$NetBSD: MESSAGE,v 1.3 2004/01/22 12:48:32 jmmv Exp $
+$NetBSD: MESSAGE,v 1.1 2005/06/04 10:41:42 jmmv Exp $
 
 You should install the swfdec-gtk2 package, which provides an SWF
 gdk-pixbuf loader for the GTK2 toolkit.
