@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2005/03/27 15:43:37 wiz Exp $
+# $NetBSD: Makefile,v 1.1 2005/06/04 10:41:42 jmmv Exp $
 #
 
 PKGREVISION=		2
