@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.4 2004/09/22 08:09:38 jlam Exp $
+@comment $NetBSD: PLIST,v 1.1 2005/06/04 10:41:42 jmmv Exp $
 bin/swf_play
 include/swfdec/swf.h
 include/swfdec/swfdec.h
