@@ -1,4 +1,4 @@
-$NetBSD: patch-ab,v 1.3 2003/05/12 20:17:48 jmc Exp $
+$NetBSD: patch-ab,v 1.1 2005/06/04 10:41:42 jmmv Exp $
 
 --- player/swf_play.c.orig	Wed Feb  5 20:19:27 2003
 +++ player/swf_play.c	Mon May 12 11:43:12 2003
